# mapleland_speed_quiz_breaker

./: .gitignore  Makefile  README.md  create_ground_truth.ipynb  extract_characters_from_pdf.ipynb  extract_quiz.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  split_gt_images.ipynb
sqb/: search.py  tools.py
